updated contact info
updated contact info pages

--- a/onepage-text.html
+++ b/onepage-text.html
@@ -1016,28 +1016,28 @@ Start Blog Section
  				<ul class="contact-short-info mt-4">
  					<li class="mb-3">
  						<i class="tf-ion-ios-home"></i>
- 						<span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
+ 						<span>Pune</span>
  					</li>
  					<li class="mb-3">
  						<i class="tf-ion-android-phone-portrait"></i>
- 						<span>Phone: +880-31-000-000</span>
+ 						<span>Phone: 000-00-000-000</span>
  					</li>
  					<li class="mb-3">
  						<i class="tf-ion-android-globe"></i>
- 						<span>Fax: +880-31-000-000</span>
+ 						<span>Fax: 000-00-000-000</span>
  					</li>
  					<li>
  						<i class="tf-ion-android-mail"></i>
- 						<span>Email: hello@meghna.com</span>
+ 						<span>Email: info@netexadigital.com</span>
  					</li>
  				</ul>
  				<!-- Footer Social Links -->
  				<div class="social-icon">
  					<ul>
- 						<li><a href="https://themefisher.com/"><i class="tf-ion-social-facebook"></i></a></li>
- 						<li><a href="https://themefisher.com/"><i class="tf-ion-social-twitter"></i></a></li>
- 						<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble-outline"></i></a></li>
- 						<li><a href="https://themefisher.com/"><i class="tf-ion-social-linkedin-outline"></i></a></li>
+ 						<li><a href=""><i class="tf-ion-social-facebook"></i></a></li>
+ 						<li><a href=""><i class="tf-ion-social-twitter"></i></a></li>
+ 						<li><a href=""><i class="tf-ion-social-dribbble-outline"></i></a></li>
+ 						<li><a href=""><i class="tf-ion-social-linkedin-outline"></i></a></li>
  					</ul>
  				</div>
  				<!--/. End Footer Social Links -->
@@ -1078,7 +1078,7 @@ Start Blog Section
 =            Google Map            =
 =================================-->
 <div class="google-map">
-	<div id="map_canvas" class="map_canvas" data-latitude="40.712776" data-longitude="-74.005974" data-marker="images/marker.png" data-marker-name="Bingo"></div>
+	<div id="map_canvas" class="map_canvas" data-latitude="18.5204" data-longitude="73.8567" data-marker="images/marker.png" data-marker-name="Bingo"></div>
 </div>
  <!--====  End of Google Map  ====-->
 <footer id="footer" class="bg-one">
