--- a/pricing.html
+++ b/pricing.html
@@ -176,8 +176,7 @@ Start About Section
 			<div class="col-lg-6">
 				<div class="title text-center">
 					<h2>We Are Netexa Digital Consulting</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam reprehenderit accusamus labore iusto,
-						aut, eum itaque illo totam tempora eius.</p>
+					<p>At Netexa Digital, we believe in the transformative power of technology. As a cutting-edge startup in the heart of the IT industry, we're dedicated to revolutionizing the way businesses navigate the digital landscape. With a passion for innovation and a commitment to excellence, we strive to deliver tailored solutions that empower our clients to thrive in an ever-evolving technological environment.</p>
 					<div class="border"></div>
 				</div>
 			</div>
@@ -191,11 +190,11 @@ Start About Section
 			</div>
 			<div class="col-md-6">
 				<ul class="checklist">
-					<li>Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
-					<li>Aenean quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
-					<li>Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
-					<li>Etiam porta sem multipage evint landing magna mollis euismod a pharetra augue.</li>
-					<li>Aenean quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
+					<li>Strategic Consulting.</li>
+					<li>Platform Implementation.</li>
+					<li>Custom Development.</li>
+					<li>OutSystems Expertise.</li>
+					<li>Customer-Centric Approach.</li>
 				</ul>
 				<a href="about.html" class="btn btn-main mt-20">Learn More</a>
 			</div>
