--- a/index-home.html
+++ b/index-home.html
@@ -189,8 +189,7 @@ Start About Section
         <!-- section title -->
         <div class="title text-center">
           <h2>What Do We Offer</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Voluptates, earum. </p>
+          <p>At Netexa Digital, we specialize in empowering businesses to harness the full potential of low-code development platforms like OutSystems and Mendix. </p>
           <div class="border"></div>
         </div>
         <!-- /section title -->
@@ -206,29 +205,29 @@ Start About Section
           <div class="col-md-6 col-sm-6">
             <div class="service-item">
               <i class="tf-ion-ios-alarm-outline"></i>
-              <h4>Time Management</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae risus nec dui venenatis.</p>
+              <h4>OutSystems</h4>
+              <p>Our team consists of certified OutSystems experts with extensive experience in implementing and customizing the platform.</p>
             </div>
           </div><!-- END COL -->
           <div class="col-md-6 col-sm-6">
             <div class="service-item">
               <i class="tf-ion-ios-briefcase-outline"></i>
-              <h4>Marketing Ideas</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae risus nec dui venenatis.</p>
+              <h4>Mendix</h4>
+              <p>Our team of certified Mendix experts guides clients through the entire platform implementation process, from initial setup to configuration and deployment.</p>
             </div>
           </div><!-- END COL -->
           <div class="col-md-6 col-sm-6">
             <div class="service-item">
               <i class="tf-ion-ios-email-outline"></i>
-              <h4>Mail Support</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae risus nec dui venenatis.</p>
+              <h4>Data Science</h4>
+              <p>With a deep understanding of statistical modeling, machine learning, and data visualization techniques, we bring a wealth of expertise to every project, ensuring that our clients derive maximum value from their data.</p>
             </div>
           </div><!-- END COL -->
           <div class="col-md-6 col-sm-6">
             <div class="service-item">
               <i class="tf-ion-ios-locked-outline"></i>
-              <h4>Secure System</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae risus nec dui venenatis.</p>
+              <h4>AI / ML</h4>
+              <p>As pioneers in AI and ML consulting, we offer a comprehensive range of services designed to meet the unique needs of businesses across various industries.</p>
             </div>
           </div><!-- END COL -->
         </div>
@@ -247,8 +246,7 @@ Start About Section
 			<div class="col-lg-6">
 				<div class="title text-center">
 					<h2>We Are Netexa Digital Consulting</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam reprehenderit accusamus labore iusto,
-						aut, eum itaque illo totam tempora eius.</p>
+					<p>At Netexa Digital, we believe in the transformative power of technology. As a cutting-edge startup in the heart of the IT industry, we're dedicated to revolutionizing the way businesses navigate the digital landscape. With a passion for innovation and a commitment to excellence, we strive to deliver tailored solutions that empower our clients to thrive in an ever-evolving technological environment.</p>
 					<div class="border"></div>
 				</div>
 			</div>
@@ -262,11 +260,11 @@ Start About Section
 			</div>
 			<div class="col-md-6">
 				<ul class="checklist">
-					<li>Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
-					<li>Aenean quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
-					<li>Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
-					<li>Etiam porta sem multipage evint landing magna mollis euismod a pharetra augue.</li>
-					<li>Aenean quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
+					<li>Strategic Consulting.</li>
+					<li>Platform Implementation.</li>
+					<li>Custom Development.</li>
+					<li>OutSystems Expertise.</li>
+					<li>Customer-Centric Approach.</li>
 				</ul>
 				<a href="about.html" class="btn btn-main mt-20">Learn More</a>
 			</div>
