--- a/onepage-slider.html
+++ b/onepage-slider.html
@@ -159,9 +159,9 @@ End Fixed Navigation
 				<div class="col-md-12 text-center">
 					<h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">Crafting Digital <br>
 						Experience</h1>
-					<p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">Lorem ipsum dolor sit amet,
-						consectetur adipisicing elit. Quod, <br> veritatis tempore nostrum id
-						officia quaerat eum corrupti, <br> ipsa aliquam velit.</p>
+					<p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">At Netexa Digital, 
+						we believe in the transformative power of technology.<br>
+						We empower organizations to rapidly develop and deploy software applications using low-code tools like OutSystems and Mendix.<br></p>
 					<a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn btn-main"
 						href="service.html">Explore Us</a>
 				</div>
@@ -172,11 +172,8 @@ End Fixed Navigation
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<h1 data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".1">We Combine Design <br> and
-						Creativity</h1>
-					<p data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".5">Create just what you need
-						for your Perfect Website. Choose from a wide range
-						<br> of Elements & simply put them on our Canvas.</p>
+					<h1 data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".1">Combine Innovation <br>and Agility</h1>
+					<p data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".5">We are dedicated to revolutionize the way businesses navigate the digital landscape.</p>
 					<a data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".8" class="btn btn-main"
 						href="service.html">Explore Us</a>
 				</div>
