--- a/index-home.html
+++ b/index-home.html
@@ -198,7 +198,7 @@ Start About Section
     <div class="row">
 
       <div class="col-md-4 text-center d-none d-md-block">
-        <img loading="lazy" src="images/about/member.jpg" class="img-fluid inline-block" alt="">
+        <img loading="lazy" src="images/about/member2.jpg" class="img-fluid inline-block" alt="">
       </div>
       <div class="col-md-8">
         <div class="row text-center">
@@ -260,6 +260,7 @@ Start About Section
 			</div>
 			<div class="col-md-6">
 				<ul class="checklist">
+				
 					<li>Strategic Consulting.</li>
 					<li>Platform Implementation.</li>
 					<li>Custom Development.</li>
