--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@ End Fixed Navigation
 				</p>
 			</div>
 			<div class="col-lg-6 mt-4 mt-lg-0">
-				<img loading="lazy" class="img-fluid" src="images/company/company-image.jpg" alt="">
+				<img loading="lazy" class="img-fluid" src="images/company/company-image2.jpg" alt="">
 			</div>
 		</div>
 	</div>
@@ -196,7 +196,7 @@ End Fixed Navigation
 					assumenda vel, quia earum voluptatem blanditiis vero accusantium saepe aliquid nulla nemo accusamus, culpa
 					inventore! Culpa nemo aspernatur tenetur, at quam aliquid reprehenderit obcaecati dicta illum mollitia,
 					perferendis hic, beatae voluptates? Ex labore, obcaecati harum nam.</p>
-				<img loading="lazy" src="images/company/company-image-2.jpg" alt="" class="img-fluid mt-30">
+				<img loading="lazy" src="images/company/company-image-2-2.jpg" alt="" class="img-fluid mt-30">
 			</div>
 			<div class="col-md-6 mt-5 mt-md-0">
 				<h3>Our Vision</h3>
@@ -204,7 +204,7 @@ End Fixed Navigation
 					assumenda vel, quia earum voluptatem blanditiis vero accusantium saepe aliquid nulla nemo accusamus, culpa
 					inventore! Culpa nemo aspernatur tenetur, at quam aliquid reprehenderit obcaecati dicta illum mollitia,
 					perferendis hic, beatae voluptates? Ex labore, obcaecati harum nam.</p>
-				<img loading="lazy" src="images/company/company-image-3.jpg" alt="" class="img-fluid mt-30">
+				<img loading="lazy" src="images/company/company-image-3-2.jpg" alt="" class="img-fluid mt-30">
 			</div>
 		</div>
 	</div>
@@ -227,7 +227,7 @@ End Fixed Navigation
 		<div class="row">
 			<!-- /section title -->
 			<div class="col-md-8 mx-auto">
-				<iframe src="https://player.vimeo.com/video/51119176" width="100%" height="360" frameborder="0"
+				<iframe src="https://player.vimeo.com/video/468422969?h=b8c796fff8&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
 		</div>
