--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ End Fixed Navigation
 ==================================== -->
 
 <div class="hero-slider">
-	<div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-bg-1.jpg);">
+	<div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-bg-1-2.jpg);">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
@@ -168,7 +168,7 @@ End Fixed Navigation
 			</div>
 		</div>
 	</div>
-	<div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-bg-2.jpg);">
+	<div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-bg-2-2.jpg);">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
@@ -202,7 +202,7 @@ Start About Section
     <div class="row">
 
       <div class="col-md-4 text-center d-none d-md-block">
-        <img loading="lazy" src="images/about/member.jpg" class="img-fluid inline-block" alt="">
+        <img loading="lazy" src="images/about/member2.jpg" class="img-fluid inline-block" alt="">
       </div>
       <div class="col-md-8">
         <div class="row text-center">
@@ -264,6 +264,7 @@ Start About Section
 			</div>
 			<div class="col-md-6">
 				<ul class="checklist">
+				
 					<li>Strategic Consulting.</li>
 					<li>Platform Implementation.</li>
 					<li>Custom Development.</li>
