Updated address and email
email and address

--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,9 @@ End Fixed Navigation
  				<ul class="contact-short-info mt-4">
  					<li class="mb-3">
  						<i class="tf-ion-ios-home"></i>
- 						<span>Pune</span>
+ 						<span>Suite No. 1219, 15/A, 4th Floor, A - Block,
+							City Vista, Fountain Road,
+							Kharadi - Pune (Maharashtra) - 411014</span>
  					</li>
  					<li class="mb-3">
  						<i class="tf-ion-android-phone-portrait"></i>
@@ -204,7 +206,7 @@ End Fixed Navigation
  					</li>
  					<li>
  						<i class="tf-ion-android-mail"></i>
- 						<span>Email: info@netexadigital.com</span>
+ 						<span>Email: pmo@netexadigital.com</span>
  					</li>
  				</ul>
  				<!-- Footer Social Links -->
