--- a/onepage-text.html
+++ b/onepage-text.html
@@ -1016,7 +1016,9 @@ Start Blog Section
  				<ul class="contact-short-info mt-4">
  					<li class="mb-3">
  						<i class="tf-ion-ios-home"></i>
- 						<span>Pune</span>
+ 						<span>Suite No. 1219, 15/A, 4th Floor, A - Block,
+							City Vista, Fountain Road,
+							Kharadi - Pune (Maharashtra) - 411014</span>
  					</li>
  					<li class="mb-3">
  						<i class="tf-ion-android-phone-portrait"></i>
@@ -1028,7 +1030,7 @@ Start Blog Section
  					</li>
  					<li>
  						<i class="tf-ion-android-mail"></i>
- 						<span>Email: info@netexadigital.com</span>
+ 						<span>Email: pmo@netexadigital.com</span>
  					</li>
  				</ul>
  				<!-- Footer Social Links -->
