--- a/single-post.html
+++ b/single-post.html
@@ -27,7 +27,7 @@
   <meta name="theme-name" content="bingo" />
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="images/NetexaFavicon.jpg" />
 
   <!-- CSS
   ================================================== -->
@@ -74,8 +74,8 @@ Fixed Navigation
     <nav class="navbar navbar-expand-lg navbar-light px-0">
       <!-- logo -->
       <a class="navbar-brand logo" href="index.html">
-        <img loading="lazy" class="logo-default" src="images/Netexa-logo.png" alt="logo" />
-        <img loading="lazy" class="logo-white" src="images/Netexa-logo.png" alt="logo" />
+        <img loading="lazy" class="logo-default" src="images/NetexaLogoSmall.png" alt="logo" />
+        <img loading="lazy" class="logo-white" src="images/NetexaLogoSmall.png" alt="logo" />
       </a>
       <!-- /logo -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
